--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
-.App {
-  text-align: center;
+/* Inside your global CSS file or style block */
+
+/* Apply a blur effect to the image */
+.blur-image {
+  filter: blur(1px); /* Adjust the blur radius as needed */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Add a blur effect to the carousel caption background */
+.bg-blur {
+  /* background: rgba(255, 255, 255, 0.068); */
+  z-index: 0; /* Ensure the caption is above the image */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Additional styles for better readability */
+.carousel-caption h5 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  z-index: 1;
+ 
+ 
+}
+.carousel-caption a:link{
+  text-decoration: none;
+  color: black;
+}
+.carousel-caption a:hover { 
+  text-decoration: underline; 
+} 
+
+.carousel-caption p {
+  font-size: 1rem;
+  font-weight: bold;
+  z-index: 1;
+  
+}
+#carouselExampleCaptions {
+  width: 100%; /* Adjust the width as needed */
+  max-width: 1200px; /* Optional: Set a maximum width */
+  margin: 0 auto; /* Center the carousel on the page */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* Adjust the width and height of each carousel item */
+.carousel-item {
+  width: 100%; /* Adjust the width as needed */
+  height: 500px; /* Adjust the height as needed */
 }
 
-.App-link {
-  color: #61dafb;
+
+.blur-image {
+  width: 100%; /* Adjust the width as needed */
+  height: 100%; /* Adjust the height as needed */
+  opacity: 0.7;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+
+@media (max-width: 768px) {
+  .carousel,
+  .carousel-inner,
+  .carousel-item,
+  .carousel-control-prev,
+  .carousel-control-next {
+    display: none !important;
   }
 }
